# dhee

./: .gitignore  Dockerfile  README.md  go.mod  go.sum
.github/workflows/: build.yml
app/: app.go
app/common/: errors.go  grammatical_map.go  linguistic_types.go  sanskrit_fold.go
app/config/: bleve.go  bleve_initial_load.go  config.go  docstore.go  initial_load.go
app/dictionary/: bleve_dictionary_store.go  dictionary_service.go  dictionary_store.go  parse_mw_xml.go  schema.go  sqlite_dictionary_store.go  sqlite_store.go
app/docstore/: bleve.go  bleve_initial_load.go  docstore.go  initial_load.go  markdown_converter.go  sqlite.go  sqlite_driver_cgo.go  sqlite_driver_modernc.go
app/excerpts/: bleve_excerpt_store.go  excerpt_service.go  excerpt_store.go  parse_rv_tei.go  schema.go  sqlite_excerpt_store.go  sqlite_store.go
app/scripture/: parse_rv_tei.go  schema.go  scripture_service.go  scripture_store.go
app/server/: controllers.go  echo_server.go  embed.go  hash_fs.go  renderer.go
app/textbrowser/: parse_rv_tei.go  schema.go
app/transliteration/: slp1_mappings.json  tl.go  transliteration.go  transliteration_test.go
data/: README.md  config.json  rv.emb.jsonl  rv_notes.md
script/: cosine_similarity.py  generate_tl_maps.py  pyproject.toml
spec/: CONTEXT.md  CONVENTIONS.md  README.md  attributions.md  bleve-to-sqlite.md  client_side_transliteration.md  grammatical.md  hover-cards-in-table.md  listing.md  markdown_processing.md  notes_feature.md  related_verses.md  routes.md  search-selected.md  search_selected.md  templ_migration.md
(+52 files in other folders)
