[project]
name = "dhee-scripts"
version = "0.1.0"
description = "Various scripts for dhee"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.3",
    "requests>=2.32.5",
    "sentence-transformers[onnx]>=5.1.2",
    "torch>=2.9.1",
]


[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
default = false
